@@ -29,6 +29,11 @@ Lou Hevly on the <em>tmda-users mailing list</em>
 Adam McKenna on the <em>qmail mailing list</em>
 <br><br>
 
+"Sure there are other anti-spam programs they can use, but nothing is
+as elegant as TMDA."<br>
+Vincent Danen on the <em>tmda-users mailing list</em>
+<br><br>
+
 "Thanks to TMDA, I don't care if my raw address (matt@lickey.com) gets
 out there."<br>
 Matt Armstrong on the <em>ding mailing list</em>
