@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Sun Dec  2 19:41:24 2001 -->
+<!-- Fri Dec  7 15:55:33 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -152,6 +152,11 @@ Lou Hevly on the <em>tmda-users mailing list</em>
 
 "Blocks spam better than any RBL ever did."<br>
 Adam McKenna on the <em>qmail mailing list</em>
+<br><br>
+
+"Sure there are other anti-spam programs they can use, but nothing is
+as elegant as TMDA."<br>
+Vincent Danen on the <em>tmda-users mailing list</em>
 <br><br>
 
 "Thanks to TMDA, I don't care if my raw address (matt@lickey.com) gets
