@@ -1,3 +1,8 @@
+2001-12-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* results.ht (Links): Add testimonial from Vincent Danen
+	<20011207121439.B10750@mandrakesoft.com>.
+	
 2001-12-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* faq.ht (Links): Update link to Einar Bordewich's
